hphp/test/zend/good/ext-posix/posix_ctermid_basic.php
<?php

var_dump( posix_ctermid() );

?>