hphp/test/zend/bad/ext/date/tests/date_create_from_format_basic.php
<?php
var_dump(date_create_from_format()); // invalid parameters
?>